--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 {% if image_src %}
                 <div class="image-container card">
                     <div class="card-body">
-                                               
+
                         <img src="{{ url_for('static', filename='Images/imagen_recibida.png') }}" class="img-fluid" alt="Imagen recibida">
                     </div>
                     
@@ -26,7 +26,7 @@
                 {% endif %}
                 <br>
                     <!-- al presionar el boton se recarga la pagina mostrando la imagen recibida desde la app android -->
-                    <button id="reload-button" class=" btn btn-primary">recibir imagen</button>
+                    <button id="reload-button" class=" btn btn-success">recibir imagen</button>
             </div>
         </div>
     </div>
