--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
                 <div class="card-body">
                     <h3>{{ mensaje }}</h3>
                     {% if image_src %}
+                    <button id="reload-button" class="btn btn-success">recibir imagen</button>
                     <div class="image-container card">
                         <div class="card-body">
                             <img src="{{ url_for('static', filename='Images/imagen_recibida.png') }}" class="img-fluid" alt="Imagen recibida">
@@ -29,9 +30,9 @@
             
             <div class="card card-2">
                 <div class="card-body">
-                    <h2>Video en vivo</h2>
+                    <h2>Fuente de video</h2>
                     <input type="text" id="fuenteVideo" class="form-control mb-2" placeholder="192.168.1.3:4747">
-                    <button onclick="agregarVideo()" class="btn btn-primary mb-2">Obtener video</button>
+                    <button onclick="agregarVideo()" class="btn btn-success mb-2">Obtener video</button>
                     <div id="videoContainer"></div>
                 </div>
             </div>
