funciona ip input webcam

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
                 <div class="card-body">
                     <h2>Fuente de video</h2>
                     <input type="text" id="fuenteVideo" class="form-control mb-2" placeholder="192.168.1.3:4747">
-                    <button onclick="agregarVideo()" class="btn btn-success mb-2">Obtener video</button>
+                    <button onclick="agregarVideo()" id="get-url" class="btn btn-success mb-2" data-url="{{ url_for('video_feed_externo') }}" >Obtener video</button>
                     <!-- <div id="videoContainer"></div> -->
-                    <img  src="{{ url_for('video_feed_externo') }}" id="video-externo" class="img-fluid", alt="'video externo" />
+                    <img id="video-externo" class="img-fluid", alt="'video externo" />
                 </div>
             </div>
             
